--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" 
     rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
     <title>Form || HNG</title>
 </head>
 <body class="container">
@@ -18,25 +19,29 @@
         </p>
     </div>
     <div class="form-right">
-        <div class="shadow"> <strong>Try it free 7days </strong>the $20/mo. thereafter</div>
-        <form class="join-form">
+        <div class="shadow"><strong>it free 7days</strong><span class="plain"> &nbsp;the $20/mo. thereafter</span></div >
+        <form id="form" action="/"  method="GET" class="join-form">
             <div class="input-group">
-                <input type="text" placeholder="First Name">
+                <input type="text" id="first" name="first" placeholder="First Name">
+                <div id="error"></div>
             </div>
             <div class="input-group">
-                <input type="text" placeholder="Last Name">
+                <input type="text" id="last" placeholder="Last Name">
+                <div id="error"></div>
             </div>
             <div class="input-group">
-                <input type="email" placeholder="Email">
+                <input type="email" id="email" placeholder="Email">
+                <div id="error"></div>
             </div>
             <div class="input-group">
-                <input type="password" placeholder="Password">
+                <input type="password" id="password" placeholder="Password">
+                <div id="error"></div>
             </div>
             <div class="input-group">
                 <button type="submit" class="btn">claim your free trial</button>
             </div>
             <div class="footer-text">
-                By clicking the button, you are agreeing to our <span class="accent"><strong> Terms and Services</strong></span>
+                By clicking the button, you are agreeing to our <span class="accent"> &nbsp;Terms and Services</span>
             </div>
         </form>
     </div>
